# MiniOpenAITelegramBot

./: .env.dist  .gitignore  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml
src/: __main__.py  config.py  handlers.py  openai_api.py
